mongo/mongo-express-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-express
spec:
  replicas: 2
  selector:
    matchLabels:
      app: mongo-express
  template:
    metadata:
      labels:
        app: mongo-express
    spec:
      containers:
      - name: mongo-express
        image: mongo-express
        resources:
          requests:
            memory: "125Mi"
            cpu: "100m"
          limits:
            memory: "500Mi"
            cpu: "500m"
          
        ports:
        - containerPort: 8081
